@@ -40,6 +40,10 @@ RXQUEUE=5
 # If 0 Rx is disabled during transmitting, if 1 Rx stays enabled during transmitting
 RXECHO=0
 
+# Ignore repeats of the same signal for xxx milleseconds (500 by default).
+# If 0 repeats won't be ignored
+RXIGNRPTS=500
+
 # Transmitter Settings
 
 # Type of device to communicate with
